# llm-gateway

./: .gitignore  Cargo.toml  README.md  bench.toml  config.toml
.qwen/: QWEN.md
crates/config/: Cargo.toml
crates/config/src/: backend.rs  error.rs  lib.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: lib.rs  sse.rs
crates/protocols/src/functions/: streaming.rs
crates/statistics/: Cargo.toml
crates/statistics/src/: aggregator.rs  config.rs  event.rs  lib.rs  query.rs  sqlite.rs  store.rs
docs/design/: 2026-04-01-pingora-refactor-design.md  architecture.md  current-architecture.md  product.md
docs/plan/: roadmap.md  设计文档.md
docs/reports/: 20260403-pingora-poc-summary.md
docs/research/: competitors.md
docs/rules/: markdownlint.md
docs/usage/: cli.md
poc/: Cargo.toml  README.md
poc/src/: backend.rs  main.rs  proxy.rs
poc/src/middleware/: concurrency.rs  mod.rs  protocol.rs
poc/src/strategy/: chain.rs  failover.rs  mod.rs  streaming_context.rs
poc/tests/: integration_concurrency.rs  integration_failover.rs  integration_http_retry.rs  integration_streaming.rs
poc/tests/common/: mod.rs
src/: backend_node.rs  concurrency_node.rs  error.rs  health_monitor.rs  input_node.rs  lib.rs  logger.rs  main.rs  sequence_node.rs  serve.rs
