[package]
name = "llm-gateway-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
# Pingora 核心组件 - 使用最新版 0.8
pingora = "0.8"
pingora-core = "0.8"
pingora-proxy = "0.8"
pingora-http = "0.8"

llm-gateway-protocols.path = "../crates/protocols"

# 复用现有协议转换代码
# 异步运行时
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "signal",
] }

# 工具库
serde_json = "1"
log = "0.4"
env_logger = "0.11"
bytes = "1"
async-trait = "0.1"
http = "1"
dashmap = "6"
futures = "0.3"
rand = "0.8"

# 开发依赖
[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
